src/app/welcome/welcome-component.responsivity.css
@media screen and (max-width: 1024px) {
    #welcome {
        height: 585px;
    }
    
    .layer_one .avatar-container .illustration {
        height: 585px;
    }
}

@media screen and (max-width: 880px) {
    #welcome {
        height: 465px;
    }
    
    .layer_one .avatar-container .illustration {
        height: 465px;
    }
}

@media screen and (max-width: 720px) {
    #welcome {
        height: auto;
        padding: 3em 1.5em 4em;
    }

    .layer_one {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1.75em;
        width: 100%;
        flex-wrap: wrap;
    }

    .layer_one .avatar-container {
        margin-left: 0;
        width: 100%;
        display: flex;
        justify-content: center;
        order: 1;
    }
    
    .layer_one app-welcome-dialog {
        width: 100%;
        display: flex;
        justify-content: center;
        order: 2;
        margin-top: 0.25em;
    }
    
    .layer_one .avatar-container .illustration {
        height: clamp(280px, 55vw, 360px);
    }
}

@media screen and (max-width: 600px) {
    #welcome {
        padding: 2.5em 1.25em 3.5em;
        height: auto;
    }
    
    .layer_one .avatar-container .illustration {
        height: 310px;
    } 
}

@media screen and (max-width: 500px) {
    #welcome {
        padding: 2em 1.25em 3em;
    }
    
    .layer_one .avatar-container .illustration {
        height: 280px;
    } 
}

@media screen and (max-width: 320px) {
    #welcome {
        padding: 1.5em 1em 2.5em;
    }
    
    .layer_one .avatar-container .illustration {
        height: 240px;
    } 
}

